# pr-data-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/routers/: prs.py  repos.py
backend/app/services/: github.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthorFilter.tsx  Dashboard.tsx  DateFilter.tsx  PRTable.tsx  RepoFilter.tsx  ReviewerFilter.tsx  ReviewerQueue.tsx  SearchFilter.tsx  StatsBar.tsx  StatusFilter.tsx  TokenGate.tsx
frontend/src/hooks/: usePRs.ts
frontend/src/types/: index.ts
