[project]
name = "pr-review-tracker"
version = "0.1.0"
description = "Dashboard for tracking AI code reviews on GitHub PRs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.3.0",
]
